# ai_environments_at_tacc

./: .gitignore  .readthedocs.yaml  pyproject.toml
docs/: conf.py  index.rst
docs/ai_containers_tacc/: Advanced Container Build with Pytorch.rst  Containerized Kernel for Jupyter Notebooks.rst  Containers at TACC.rst
docs/conda_at_tacc/: Conda at TACC.rst  Overview of conda @ TACC.rst
docs/getting_starting_section/: Connecting to TACC.rst  Containers Tutorial.rst  Getting Started.rst  How to Create and Activate a Virtual Environment.rst  How to Install Conda.rst  Tools.rst
